--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/slayerrrrr/chaoranqi.github.io">View on GitHub</a>
 
-          <h1 id="project_title">Chaoranqi.GitHub.io</h1>
-          <h2 id="project_tagline">a simple website </h2>
+          <h1 id="project_title">Welcome to my homepage!</h1>
+          <h2 id="project_tagline">My simple website </h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/slayerrrrr/chaoranqi.github.io/zipball/master">Download this project as a .zip file</a>
