change name, address, working hours for XinYiMeiShu

--- a/single_page.html
+++ b/single_page.html
@@ -20,10 +20,10 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>心艺少儿美术培训中心</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <img src="images/star-k-logo.png" alt="LOGO">
+              <span>一切为了学生，为了一切学生</span>
             </p>
           </div>
 
@@ -43,19 +43,19 @@
             </li>
             <li>
               <a href="menu-categories.html">
-                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> 学生作品</a>
             </li>
             <li>
               <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> 关于我们</a>
             </li>
             <li>
               <a href="#">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> 工作招聘</a>
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+                <span>电话：410-602-5008</span></a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -78,16 +78,16 @@
 
     <div id="home-tiles" class="row">
       <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+        <a href="menu-categories.html"><div id="menu-tile"><span>学生作品</span></div></a>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+        <a href="single-category.html"><div id="specials-tile"><span>学习点滴</span></div></a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3635874,-76.7138622,17z/data=!4m6!1m3!3m2!1s0x89c81a14e7817803:0xab20a0e99daa17ea!2sDavid+Chu's+China+Bistro!3m1!1s0x89c81a14e7817803:0xab20a0e99daa17ea" target="_blank">
+        <a href="http://j.map.baidu.com/NbcjH" target="_blank">
           <div id="map-tile">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <span>map</span>
+            <span>学校地址</span>
           </div>
         </a>
       </div>
@@ -98,25 +98,24 @@
     <div class="container">
       <div class="row">
         <section id="hours" class="col-sm-4">
-          <span>Hours:</span><br>
-          Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
+          <span>上课时间:</span><br>
+          周五晚<br>
+          周六上下午<br>
+          周日上下午
           <hr class="visible-xs">
         </section>
         <section id="address" class="col-sm-4">
-          <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          <span>地址:</span><br>
+          开封市龙亭区<br>
+          中山路中山大厦502室
           <hr class="visible-xs">
         </section>
-        <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
-          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+        <section id="家长评价" class="col-sm-4">
+          <p>"我的孩子在这里好好学习，天天向上"</p>
+          <p>"自从来了这里，我的孩子再也不沉迷网络游戏了"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="text-center">&copy; Copyright Xin Mei 2016</div>
     </div>
   </footer>
 
