added pictures and revise link and map

--- a/single_page.html
+++ b/single_page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>Xin Yi Mei Shu</title>
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/single_page.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
           <div class="navbar-brand">
             <a href="index.html"><h1>心艺少儿美术培训中心</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="LOGO">
+<!--               <img src="images/jumbotron_76.jpg" alt="LOGO"> -->
               <span>一切为了学生，为了一切学生</span>
             </p>
           </div>
@@ -50,7 +50,7 @@
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> 关于我们</a>
             </li>
             <li>
-              <a href="#">
+              <a href="http://kaifeng.58.com/techang/25107086582704x.shtml?psid=129997164194807307070615132&entinfo=25107086582704_0&iuType=p_1&PGTID=0d3037f7-0092-60f2-5f63-dd6d4c2e5a7a&ClickID=2" target="_blank">
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> 工作招聘</a>
             </li>
             <li id="phone" class="hidden-xs">
@@ -73,7 +73,7 @@
 
   <div id="main-content" class="container">
     <div class="jumbotron">
-      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive ">
     </div>
 
     <div id="home-tiles" class="row">
@@ -86,7 +86,7 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="http://j.map.baidu.com/NbcjH" target="_blank">
           <div id="map-tile">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="http://developer.baidu.com/map/jsdemo/demo/a1_1.htm" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
             <span>学校地址</span>
           </div>
         </a>
